tests/ui/parser/unbalanced-doublequote.stderr
error[E0765]: unterminated double quote string
  --> $DIR/unbalanced-doublequote.rs:5:5
   |
LL | /     "
<<<<<<< HEAD
...  |
LL | | // String Literals
   | |__________________^
=======
LL | | }
   | |__^
>>>>>>> pull-upstream-temp--do-not-use-for-real-code

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
